Fixed bug of Nav overlapping drop box

--- a/client/src/NavBar.css
+++ b/client/src/NavBar.css
@@ -27,7 +27,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    z-index: 1000;
+    z-index: 90;
     transition: top 0.3s;
     border-bottom: 1px solid var(--border)
 }
